--- a/components/hwq7auqgo-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/hwq7auqgo-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hwq7auqgo-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-120b7a4732.geih.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:bf79525ed6c33289e4fc12697853e1a1b2d77a7f@sha256:360581b9a97ef58e739da39ff851b230c378ff3a68f69b62d907e1543760fd93
+          name: container-image
